syntax = "proto3";

package o5.aws.deployer.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "o5/environment/v1/environment.proto";
import "j5/state/v1/metadata.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_pb";

message EnvironmentKeys {
  option (j5.ext.v1.psm).entity_name = "environment";

  string environment_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.key).primary_key = true
  ];

  string cluster_id = 2 [(buf.validate.field).string.uuid = true];
}

message EnvironmentState {
  j5.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  EnvironmentKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  EnvironmentStatus status = 3 [(j5.list.v1.field).enum.filtering = {
    filterable: true
    default_filters: ["ENVIRONMENT_STATUS_ACTIVE"]
  }];

  EnvironmentStateData data = 4;
}

message EnvironmentStateData {
  o5.environment.v1.Environment config = 4;
}

enum EnvironmentStatus {
  ENVIRONMENT_STATUS_UNSPECIFIED = 0;
  ENVIRONMENT_STATUS_ACTIVE = 1;
}

message EnvironmentEvent {
  j5.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];
  EnvironmentKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).message.flatten = true
  ];
  EnvironmentEventType event = 3 [(buf.validate.field).required = true];
}

message EnvironmentEventType {
  oneof type {
    option (j5.list.v1.oneof).filtering.filterable = true;

    Configured configured = 1;
  }

  message Configured {
    o5.environment.v1.Environment config = 1;
  }
}
